--- a/src/components/include.scss
+++ b/src/components/include.scss
@@ -530,6 +530,43 @@ h1.logo {
 .page {
 	position: relative;
 	z-index: 1;
+
+	.alert-wrapper {
+		position: absolute;
+		top: 0;
+		left: 0;
+		z-index: 9998;
+		width: 100%;
+		height: 100%;
+		background: rgba(0,0,0,0.66);
+	
+		.alert-dialog {
+			position: absolute;
+			top: 25%;
+			left: 50%;
+			width: 400px;
+			margin-left: -200px;
+			text-align: center;
+			padding: 15px;
+			background: #fff;
+	
+			h3 {
+				margin: 5px 0;
+				font-size: 1.2em;
+			}
+	
+			.buttons {
+				display: block;
+				width: 100%;
+				margin-top: 5px;
+	
+				.action_button {
+					display: inline-block;
+					margin: 10px 0 5px 0;
+				}
+			}
+		}
+	}
 }
 
 section,
