--- a/src/components/widget-creator-page.scss
+++ b/src/components/widget-creator-page.scss
@@ -12,7 +12,6 @@ html {
 }
 
 body {
-	overflow: hidden;
 
 	.create {
 		height: 100%;
